Wed Dec  5 18:08:45 2007  Tanaka Akira  <akr@fsij.org>

	* numeric.c (int_odd_p): new method Integer#odd?.
	  (int_even_p): new method Integer#even?.
	  (int_pred): new method Integer#pred.
	  (fix_odd_p): new method Fixnum#odd?.
	  (fix_even_p): new method Fixnum#even?.

Wed Dec  5 15:15:21 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* range.c (step_i, range_step): support non-fixnum steps.
	  [ruby-talk:282100]

Tue Dec  4 11:23:50 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* bignum.c (rb_cstr_to_inum): trailing spaces may exist at sqeezing
	  preceeding 0s.  [ruby-core:13873]

Sun Dec  2 22:43:45 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (error_print): put newline unless multiple line message ends
	  with a newline.  [ruby-dev:32429]

Sun Dec  2 15:49:20 2007  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rss/rss.rb, test/rss/test_version.rb, NEWS: 0.2.1 -> 0.2.2.

	* lib/rss/maker/itunes.rb: fixed new_itunes_category.
	* lib/rss/maker/taxonomy.rb: new_taxo_topic -> new_topic because
	of consistency.

	* test/rss/test_maker_itunes.rb, test/rss/test_itunes.rb: removed
	needless UTF-8 characters.

Sun Dec  2 01:12:15 2007  James Edward Gray II  <jeg2@ruby-lang.org>

	Merged 14070 from trunk.

	* lib/xmlrpc/server.rb (XMLRPC::Server#server): Improve signal handling so
	  pressing control-c in the controlling terminal or sending SIGTERM stops
	  the XML-RPC server.

Sat Dec  1 15:13:33 2007  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* lib/resolv.rb: documentation update.  backported from 1.9.
	  [ruby-core:13273]

Sat Dec  1 03:30:47 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (newline_node): set line from outermost node before removing
	  NODE_BEGIN.  [ruby-dev:32406]

Fri Nov 30 21:53:28 2007  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rss/rss.rb, test/rss/test_version.rb: 0.2.0 -> 0.2.1.

	* lib/rss/content.rb, lib/rss/content/1.0.rb,
	lib/rss/content/2.0.rb, lib/rss/maker/content.rb,